slider now scales correctly on small viewports

--- a/src/components/Project/Project.module.css
+++ b/src/components/Project/Project.module.css
@@ -76,8 +76,17 @@
   padding: 5px 15px 15px 25px;
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 500px) {
   .Project {
-    max-width: 80%;
+    max-width: 100%;
+  }
+}
+
+@media (max-height: 768px) {
+  .MainContentWrapper p {
+    font-size: 2vh;
+  }
+  .MainContentWrapper ul {
+    font-size: 2vh;
   }
 }
